# Caffeine-Club

./: .gitignore  README.md  pyproject.toml
main/: settings.py  urls.py
projects/: admin.py  forms.py  models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_auto_20210719_2207.py  0003_auto_20210719_2209.py  0004_project_featured_image.py  0005_alter_project_featured_image.py
projects/templates/projects/: delete_object.html  project.html  project_form.html  projects.html
static/styles/: main.css
templates/: base.html  index.html  navbar.html
