[tool.poetry]
name = "myProject"
version = "0.1.0"
description = ""
authors = ["Rahul Chaudhary <rahul.chaudhary.3100@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
Pillow = "^8.3.1"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
